Page shift fix

--- a/src/Сomponents/BodyBoard/BodyBoard.module.css
+++ b/src/Сomponents/BodyBoard/BodyBoard.module.css
@@ -2,4 +2,6 @@
 	display: flex;
 	flex-flow: row wrap;
   max-width:100%;
+  margin: 1em 0;
+
 }
