--- a/src/Сomponents/Paper/Paper.module.css
+++ b/src/Сomponents/Paper/Paper.module.css
@@ -8,8 +8,7 @@
   position: relative;
   box-sizing: border-box;
   padding: 1em;
-  margin: 0.8em;
-  margin-bottom: 0.3em;
+  margin: 0.8em 1.6em 0.3em 0;
   max-width: 100%;
 }
   
